--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+mailchimp3==2.0.17
+requests==2.18.4
+urllib3==1.22
+chardet==3.0.4
+certifi==2017.7.27.1
+idna==2.6
+PySocks==1.6.7
+pyOpenSSL==17.3.0
+cryptography==2.0.3
+
 flake8==3.4.1
 configparser==3.5.0
 pycodestyle==2.3.1
