--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,11 @@ idna==2.6
 PySocks==1.6.7
 pyOpenSSL==17.3.0
 cryptography==2.0.3
+google-api-python-client==1.6.4
+uritemplate==3.0.0
+six==1.11.0
+oauth2client==4.1.2
+httplib2==0.10.3
 
 flake8==3.4.1
 configparser==3.5.0
